--- a/pytorch.ipynb
+++ b/pytorch.ipynb
@@ -109,7 +109,7 @@
     "    # TODO : set dataset path\n",
     "    # TODO : We recommends you to place your code and tranining dataset in the same location.\n",
     "    \n",
-    "    dir = '/home/sangyun/Datasets/KohYoung/train'\n",
+    "    dir = './Koh_Young_AI_data/'\n",
     "    \n",
     "\n",
     "    for div_idx in range(0, 10): # Div into 10 groups\n",
@@ -499,6 +499,13 @@
     "\n",
     "    print(f'{str(div_idx)} Iteration Done.')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
