--- a/pytorch.ipynb
+++ b/pytorch.ipynb
@@ -251,18 +251,16 @@
     "    num_epoches       : number of iteration\n",
     "    train_data_loader : dataloder of training dataset \n",
     "    \"\"\"\n",
-    "\n",
-    "    device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
     "    \n",
     "    model.train()                     # Set train mode. \n",
-    "    criterion = criterion\n",
+    "    model.before_task()\n",
     "    for epoch in range(num_epochs):\n",
     "        acc      = 0 # Accuracy\n",
     "        avg_cost = 0 # Average Cost \n",
     "        for x, y in train_data_loader:\n",
     "            out = model(x.to(device))            # Inference\n",
     "            _, preds = torch.max(out, 1)         # preds : Predicted class\n",
-    "            cost = criterion(out, y.to(device))  # Calculates errors between true label and predictions with respect to your criterion. \n",
+    "            cost = model.get_cost(out, y.to(device))\n",
     "\n",
     "            # Optimize processs.\n",
     "            optimizer.zero_grad()\n",
@@ -272,6 +270,9 @@
     "            avg_cost += cost # Average cost \n",
     "            acc      += torch.sum(preds.detach().cpu() == (y.data).detach().cpu()) # Accuracy\n",
     "        print(f\" # - EPOCHS {epoch + 1} / {num_epochs} | AvgCost {avg_cost} | Accuracy : {acc/len(x_train)} - #\")\n",
+    "    \n",
+    "    model.after_task(train_data_loader)\n",
+    "\n",
     "\n",
     "    # Return trainded model and accuracy. \n",
     "    return model, acc/len(x_train)"
@@ -299,8 +300,6 @@
     "    x_vallid          : input data for validation\n",
     "    valid_data_loader : dataloder of valid dataset \n",
     "    \"\"\"\n",
-    "\n",
-    "    device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
     "    \n",
     "    model.eval() # Set eval mode\n",
     "    \n",
@@ -335,66 +334,102 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # TODO : Customize your own model !\n",
-    "# class CustomNetwork(nn.Module):\n",
-    "#     def __init__(self, nn.Module):\n",
-    "#         pass\n",
-    "\n",
-    "#     def forward(self):\n",
-    "#         pass    \n",
-    "\n",
-    "# -------------------------------- Sample CNN Model ------------------------------------ #\n",
     "class SimpleCNN(nn.Module):\n",
     "    def __init__(self, in_channel, num_class):\n",
     "        super().__init__()\n",
-    "        self.num_class = num_class\n",
-    "        self.layer1 = nn.Sequential(\n",
-    "            nn.Conv2d(in_channel, 32, kernel_size=3, stride=1, padding=1),\n",
-    "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(kernel_size=2, stride=2)\n",
-    "        )\n",
+    "        from torchvision.models import resnet18\n",
+    "        self.backbone = resnet18()\n",
+    "        self.backbone.fc = nn.Linear(self.backbone.fc.in_features, num_class)\n",
     "\n",
-    "        self.layer2 = nn.Sequential(\n",
-    "            nn.Conv2d(32, 32, kernel_size=3, stride=1, padding=1),\n",
-    "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(kernel_size=2, stride=2)\n",
-    "        )\n",
-    "\n",
-    "        self.layer3 = nn.Sequential(\n",
-    "            nn.Conv2d(32, 64, kernel_size=3, stride=1, padding=1),\n",
-    "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(kernel_size=2, stride=2)\n",
-    "        )\n",
-    "\n",
-    "        self.fc1 = nn.Linear(64*16*16, self.num_class)\n",
+    "        self.fisher = None\n",
+    "        self.lamb = 80\n",
+    "        self.fishermax = 0.0001\n",
+    "        self._known_classes = 0\n",
+    "        self._total_classes = 0\n",
+    "        self._cur_task = -1\n",
     "\n",
     "    def forward(self, x):\n",
-    "        # rescaling\n",
     "        x = x/255.0\n",
-    "\n",
-    "        # TODO : Convolution layer\n",
-    "        out = self.layer1(x)\n",
-    "        out = self.layer2(out)\n",
-    "        out = self.layer3(out)\n",
-    "\n",
-    "        # TODO : Reshape for fully-connected layer\n",
-    "        out = out.view(-1, 64*16*16)\n",
-    "\n",
-    "        # TODO : Fully-connected layer\n",
-    "        out = self.fc1(out)\n",
-    "\n",
-    "        # TODO : final-pycharm output - 1000 (class num)\n",
+    "        out = self.backbone(x)\n",
+    "            \n",
     "        return out\n",
+    "\n",
+    "    def before_task(self):\n",
+    "        self._cur_task += 1\n",
+    "        self._total_classes = self._known_classes + 100 \n",
+    "\n",
+    "    def after_task(self, train_loader):\n",
+    "        if self.fisher is None:\n",
+    "            self.fisher = self.getFisherDiagonal(train_loader)\n",
+    "        else:\n",
+    "            alpha = self._known_classes / self._total_classes\n",
+    "            new_finsher = self.getFisherDiagonal(train_loader)\n",
+    "            for n, p in new_finsher.items():\n",
+    "                new_finsher[n][: len(self.fisher[n])] = (\n",
+    "                    alpha * self.fisher[n]\n",
+    "                    + (1 - alpha) * new_finsher[n][: len(self.fisher[n])]\n",
+    "                )\n",
+    "            self.fisher = new_finsher\n",
+    "        self.mean = {\n",
+    "            n: p.clone().detach()\n",
+    "            for n, p in self.named_parameters()\n",
+    "            if p.requires_grad\n",
+    "        }\n",
+    "        self._known_classes = self._total_classes\n",
+    "\n",
+    "    def getFisherDiagonal(self, train_loader):\n",
+    "        fisher = {\n",
+    "            n: torch.zeros(p.shape).to(device)\n",
+    "            for n, p in self.named_parameters()\n",
+    "            if p.requires_grad\n",
+    "        }\n",
+    "        self.train()\n",
+    "        optimizer = optim.SGD(self.parameters(), lr=learning_rate)\n",
+    "        for i, (inputs, targets) in enumerate(train_loader):\n",
+    "            inputs, targets = inputs.to(device), targets.to(device)\n",
+    "            logits = self.forward(inputs)\n",
+    "            loss = torch.nn.functional.cross_entropy(logits, targets)\n",
+    "            optimizer.zero_grad()\n",
+    "            loss.backward()\n",
+    "            for n, p in self.named_parameters():\n",
+    "                if p.grad is not None:\n",
+    "                    fisher[n] += p.grad.pow(2).clone()\n",
+    "        for n, p in fisher.items():\n",
+    "            fisher[n] = p / len(train_loader)\n",
+    "            fisher[n] = torch.min(fisher[n], torch.tensor(self.fishermax))\n",
+    "        return fisher\n",
+    "    \n",
+    "    def get_cost(self, logits, targets):\n",
+    "        if self._cur_task == 0:\n",
+    "            return torch.nn.functional.cross_entropy(logits, targets)\n",
+    "        else:\n",
+    "            loss_clf = torch.nn.functional.cross_entropy(\n",
+    "                logits[:, self._known_classes :], targets - self._known_classes\n",
+    "            )\n",
+    "            loss_ewc = self.compute_ewc()\n",
+    "            return loss_clf + self.lamb * loss_ewc\n",
+    "\n",
+    "    def compute_ewc(self):\n",
+    "        loss = 0\n",
+    "        for n, p in self.named_parameters():\n",
+    "            if n in self.fisher.keys():\n",
+    "                loss += (\n",
+    "                    torch.sum(\n",
+    "                        (self.fisher[n])\n",
+    "                        * (p[: len(self.mean[n])] - self.mean[n]).pow(2)\n",
+    "                    )\n",
+    "                    / 2\n",
+    "                )\n",
+    "        return loss\n",
     "\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "\n",
-    "# TODO : Define your model\n",
     "model = SimpleCNN(in_channel=3, num_class=1000).to(device)\n",
-    "\n",
+    "        \n",
     "# TODO : Set your hyperparameters\n",
-    "batch_size        = 32\n",
-    "learning_rate     = 0.01\n",
-    "num_epochs        = 2\n",
+    "batch_size        = 500\n",
+    "learning_rate     = 0.1\n",
+    "num_epochs        = 25\n",
     "optimizer         = optim.SGD(model.parameters(), lr=learning_rate)\n",
     "random_seed       = 555\n",
     "validation_num    = 20 # for 150 images for class, the number for validation data\n",
@@ -424,7 +459,7 @@
     "--div_data  : split your data or not.   \n",
     "\"\"\"\n",
     "parser = argparse.ArgumentParser()  \n",
-    "parser.add_argument('--div_data',   default = True)  # Change this with 'False' after dividing your datsaet into 10 groups.\n",
+    "parser.add_argument('--div_data',   default = False)  # Change this with 'False' after dividing your datsaet into 10 groups.\n",
     "args = parser.parse_args(args=[])  \n",
     "\n",
     "# TODO : Saving tranined model in this location. Don't change this path. \n",
